wip - clipboard history

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@ Thumbs.db
 #--------------------------------
 # Added by user
 #--------------------------------
+
+Replaced Files*
+Resources/php.ini
