--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿#--------------------------------
+#--------------------------------
 # Ignore invisible files/folders
 #--------------------------------
 .*
@@ -51,3 +51,4 @@ Thumbs.db
 
 Replaced Files*
 Resources/php.ini
+Libraries/lib4d-arm64.dylib
