--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ Replaced Files*
 Resources/php.ini
 Libraries/lib4d-arm64.dylib
 Build/Components/4DPop Pasteboard.4dbase/_gsdata_
+Build/Components/4DPop Pasteboard.dmg
